<resources>
    <string name="str_hint_search_city">请输入城市名或拼音</string>
    <string name="str_cancel">取消</string>
    <string name="str_retry_location">重新定位</string>
    <string name="str_is_location">正在定位</string>
    <string name="air_city_select_error">疫情期间暂不支持国际/中国港澳台业务</string>
    <string name="air_date_select_ok">确定</string>
    <string name="air_date_no_select">请选择日期</string>
    <string name="air_city_no_select">请选择城市</string>
    <string name="air_home_domestic">国内</string>
    <string name="air_home_internation">国际/中国港澳台</string>
    <string name="air_home_go_back">往返</string>
    <string name="air_home_depcity">北京</string>
    <string name="air_home_arrcity">上海</string>
    <string name="air_home_search">搜索机票</string>
    <string name="air_home_order">机票订单</string>
    <string name="air_home_check_in">值机选座</string>
    <string name="air_home_title">机票</string>

</resources>